fix: Aside menu z-index

--- a/css/home.css
+++ b/css/home.css
@@ -60,6 +60,8 @@ body>nav>div>aside {
     top: 0;
     left: -200px;
 
+    z-index: 1000;
+
     box-sizing: border-box;
 
     height: 100%;
